# geosss

./: .gitignore  LICENSE  README.md  demo.ipynb  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: update-requirements.yml
data/: protein_registration.npz
geosss/: __init__.py  curve.py  demo_utils.py  demo_vis.py  distributions.py  io.py  mcmc.py  pointcloud.py  rand.py  registration.py  sampling.py  sphere.py  sphere_tesselation.py  spherical_curve.py  testing.py  tsp_solver.py  utils.py  vMF_diagnostics.py  visualize.py
scripts/: Bingham.ipynb  README.md  bingham.py  curve.py  curve_3d.py  curve_Nd.py  curve_Nd_parallelized_nruns.py  curve_understand.ipynb  curve_vMF.py  demo.ipynb  demo_animate_vMF.py  demo_vMF.py  ess_curve.py  ess_curve_vMF.py  ess_mixture_vMF.py  ess_vMF.py  example.ipynb  mixture_vMF.py  mixture_vMF_mixture_sampler.py  mixture_vMF_rwmh_indep.py  protein_reg3d3d.py  vMF_curve_3d.py  vMF_curve_Nd.py  vMF_curve_Nd_parallel.py  vMF_diagnostics.py  visualize_Ndcurve.ipynb  visualize_curve_vMF.ipynb  visualize_mixture_vMF.ipynb
sh/: job_ess_mixture_vMF.sh  job_protein_reg3d3d.sh  parallelized_job_curve.sh  parallelized_job_mixture_sampler.sh  submit_job_curve.sh  submit_job_curve_nruns.sh  submit_job_curve_varying_kappa.sh  submit_job_curve_varying_ndim.sh  submit_job_mixture_sampler_vMF_varying_kappa.sh
tests/: test_bingham.py  test_bingham_fisher.py  test_bingham_sampling.py  test_bracketing_sampling.py  test_counter_decorator.py  test_cpd.py  test_givens_sampling.py  test_kacwalk  test_kacwalk.py  test_marginal_mixture_vMF.py  test_mcmc.py  test_mixture_rwmh_indep_sampler.py  test_radial.py  test_rejection_sampling.py  test_slerp_sampling.py  test_sphere.py  test_utils.py  testing.py
