[tool.poetry]
name = "geosss"
version = "0.2.1"
description = "Python package implementing an ideal and shrinkage-based geodesic slice sampling on the sphere."
authors = ["Michael Habeck <michael.habeck@uni-jena.de>",
           "Shantanu Kodgirwar <shantanu.kodgirwar@uni-jena.de>", 
           "Mareike Hasenpflug <mareike.hasenpflug@uni-passau.de>",
           "Daniel Rudolf <daniel.rudolf@uni-passau.de>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/microscopic-image-analysis/geosss"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
scipy = "^1.11.1"
numpy = "^1.25.1"
matplotlib = "^3.7.2"
csb = "^1.2.5"
arviz = "^0.20.0"
tsp-solver = { version = "^0.1"}
seaborn = { version = "^0.12.2", optional = true }
black = { version = "^24.3.0", optional = true }
ipykernel = { version = "^6.25.0", optional = true }
zenodo-get = { version = "^1.6.1", optional = true }
corner = {version = "^2.2.2", optional = true }
joblib = {version = "^1.4.2", optional = true }

[tool.poetry.extras]
dev = ["seaborn", "black", "ipykernel", "zenodo-get", "corner", "joblib"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
